# point-cloud-training-cpp

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.h
src/util/: config.h  type.h
test/: CMakeLists.txt  main_test.cpp
